--- a/playground/component.html
+++ b/playground/component.html
@@ -10,10 +10,12 @@
     <div id="app">
       <app-header> </app-header>
       <app-content></app-content>
+      <app-footer></app-footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
+      // 전역 컴포넌트 등록
       Vue.component("app-header", {
         template: "<h1>Header</h1>",
       });
@@ -22,8 +24,15 @@
         template: "<div>content</div>",
       });
 
+      // Root 객체
       new Vue({
         el: "#app",
+        // 지역 컴포넌트 등록 방식
+        components: {
+          "app-footer": {
+            template: "<footer>footer</footer>",
+          },
+        },
       });
     </script>
   </body>
