--- a/playground/props.html
+++ b/playground/props.html
@@ -9,12 +9,18 @@
   <body>
     <div id="app">
       <app-header v-bind:propsdata="message"></app-header>
+      <app-content v-bind:propsdata="num"></app-content>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
       var appHeader = {
-        template: "<h1>header</h1>",
+        template: "<h1>{{ propsdata }}</h1>",
+        props: ["propsdata"],
+      };
+
+      var appContent = {
+        template: "<div>{{ propsdata }}</div>",
         props: ["propsdata"],
       };
 
@@ -22,9 +28,11 @@
         el: "#app",
         components: {
           "app-header": appHeader,
+          "app-content": appContent,
         },
         data: {
           message: "hi",
+          num: 10,
         },
       });
     </script>
