--- a/playground/event-emit.html
+++ b/playground/event-emit.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <app-header></app-header>
+      <app-header v-on:pass="logText"></app-header>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -26,6 +26,11 @@
         el: "#app",
         components: {
           "app-header": appHeader,
+        },
+        methods: {
+          logText: function () {
+            console.log("hi");
+          },
         },
       });
     </script>
