--- a/playground/component-same-level.html
+++ b/playground/component-same-level.html
@@ -8,14 +8,15 @@
   </head>
   <body>
     <div id="app">
-      <app-header></app-header>
-      <app-content></app-content>
+      <app-header v-bind:propsdata="num"></app-header>
+      <app-content v-on:pass="deliverNum"></app-content>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
       var appHeader = {
         template: "<div>header</div>",
+        props: ["propsdata"],
       };
 
       var appContent = {
@@ -36,6 +37,11 @@
         },
         data: {
           num: 0,
+        },
+        methods: {
+          deliverNum: function (value) {
+            this.num = value;
+          },
         },
       });
     </script>
