--- a/playground/router.html
+++ b/playground/router.html
@@ -12,7 +12,29 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
     <script>
-      var router = new VueRouter({});
+      var LoginComponent = {
+        template: "<div>login</div>",
+      };
+
+      var MainComponent = {
+        template: "<div>main</div>",
+      };
+
+      var router = new VueRouter({
+        // 페이지의 라우팅 정보
+        routes: [
+          {
+            // 페이지의 url
+            path: "/login",
+            // 해당 url에서 표시될 컴포넌트
+            component: LoginComponent,
+          },
+          {
+            path: "/main",
+            component: MainComponent,
+          },
+        ],
+      });
 
       new Vue({
         el: "#app",
